--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Chattr</title>
-    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
+    <meta name="viewport" content="width=device-width; height=device-height; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="android-mobile-web-app-capable" content="yes" />
     <meta name="format-detection" content="telephone=no" />
@@ -94,6 +94,7 @@
       .msgContainerDiv
       {
         overflow-y: scroll;
+        height: 300px;
       }
     </style>
   </head> 
